force-app/main/default/objects/GrupoAtribuicao__c/GrupoAtribuicao__c.object-meta.xml
<CustomObject>
    <description>Grupo destinado a atribuir usuários a propriedade de registros</description>
    <label>Grupo de Atribuição</label>
    <nameField>
        <label>Nome do Grupo de Atribuição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos de Atribuições</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>