force-app/main/default/objects/GrupoAtribuicao__c/fields/Canais__c.field-meta.xml
<CustomField>
    <fullName>Canais__c</fullName>
    <formula>IF ( INCLUDES (CanalAtribuicao__c, &quot;Call Center&quot; ), &quot;Call Center; &quot;,null ) &amp;  IF ( INCLUDES (CanalAtribuicao__c, &quot;Equipe Corporativa&quot;  ), &quot;Equipe Corporativa; &quot;,null ) &amp; IF ( INCLUDES (CanalAtribuicao__c, &quot;GVEN - Consultores&quot; ), &quot;GVEN - Consultores; &quot;,null ) &amp; IF ( INCLUDES (CanalAtribuicao__c, &quot;Lojas Autorizadas&quot; ), &quot;Lojas Autorizadas; &quot;,null ) &amp; IF ( INCLUDES (CanalAtribuicao__c, &quot;Lojas Próprias&quot; ), &quot;Lojas Próprias; &quot;,null ) &amp; IF ( INCLUDES (CanalAtribuicao__c, &quot;Promotores&quot; ), &quot;Promotores; &quot;,null ) &amp; IF ( INCLUDES (CanalAtribuicao__c, &quot;Novos Negocios&quot; ), &quot;Novos Negocios; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canais</label>
    <type>Text</type>
</CustomField>