force-app/main/default/objects/GrupoAtribuicao__c/fields/CanalAtribuicao__c.field-meta.xml
<CustomField>
    <fullName>CanalAtribuicao__c</fullName>
    <description>Informa o canal dos usuários que poderão receber o registro</description>
    <inlineHelpText>Informa o canal dos usuários que poderão receber o registro</inlineHelpText>
    <label>Canal de Atribuição</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canal</valueSetName>
    </valueSet>
</CustomField>