force-app/main/default/objects/GrupoAtribuicao__c/fields/Membros__c.field-meta.xml
<CustomField>
    <fullName>Membros__c</fullName>
    <label>Membros</label>
    <summaryForeignKey>MembroGrupoAtribuicao__c.GrupoAtribuicao__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>