force-app/main/default/objects/GrupoAtribuicao__c/fields/Origens__c.field-meta.xml
<CustomField>
    <fullName>Origens__c</fullName>
    <description>Campo que contém um conjunto de origens. Utilizado na regra de distribuição de leads</description>
    <label>Origens</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Odonto Exclusivo</fullName>
            </value>
            <value>
                <fullName>Mude Para</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>