force-app/main/default/objects/GrupoAtribuicao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Objeto__c</columns>
    <columns>Membros__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CanalAtribuicao__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>